<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".PunktEdu" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nazwa_punktu_wartosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nic_wartosc"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/opis_punktu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/lorem_ipsum_text"
            android:maxLines="10"
			android:scrollbars = "vertical"
			android:layout_weight="1"
		 />

        <TextView
            android:id="@+id/zadanie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zadanie_label"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tresc_pytania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tresc_pytania"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/odp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/odp_1_tresc" />

            <RadioButton
                android:id="@+id/odp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odp_2_tresc" />

            <RadioButton
                android:id="@+id/odp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odp_3_tresc" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" 
        android:gravity="bottom">

        <Button
            android:id="@+id/but_dalej"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_dalej_label" />

    </LinearLayout>

</LinearLayout>
