<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/czas_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/czas_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/czas_wartosc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_wartosc"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/punkty_zdobyte_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punkty_osiagniete_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/punkty_zdobyte_wartosc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_wartosc"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/punkty_ominiete_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punkty_ominiete_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/punkty_ominiete_wartosc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_wartosc"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/punkty_do_zdobycia_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punkty_do_zdobycia_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/punkty_do_zdobycia_wartosc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_wartosc"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>
        

    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="horizontal">

                <Button
                    android:id="@+id/skanuj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_weight="1"
                    android:text="@string/but_scan_label" />

                <Button
                    android:id="@+id/zakoncz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/but_zakoncz_label" />

            </LinearLayout>

    </LinearLayout>

</LinearLayout>
